# HotColdGame

./: CMakeLists.txt  README.md  main.cpp  sections.cfg
include/: ConfigLoader.h  Game.h  Guess.h  Section.h
src/: ConfigLoader.cpp  Game.cpp  Guess.cpp  Section.cpp
tests/: testGuess.cpp  testParse.cpp
